# StreamReceiver

./: docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json  rtsp-to-ws.js  test-stream.js
backend/src/: server.js
frontend/: index.html  nginx.conf
streamer/: package-lock.json  package.json
streamer/src/: App.css  App.tsx
streamer/src-tauri/: Cargo.toml  tauri.conf.json
streamer/src-tauri/capabilities/: default.json
streamer/src-tauri/src/: lib.rs
